<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">


    <TextView
        android:id="@+id/textKrombelHeader"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        android:text="Krombel Stats:"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/textCurrentNodes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textKrombelHeader"
        android:layout_marginTop="8dp"
        android:text="@string/descrCurrentNodes"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textMaxNodes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textCurrentNodes"
        android:layout_marginTop="8dp"
        android:text="@string/descrMaxNodes"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textCurrentClients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textMaxNodes"
        android:layout_marginTop="8dp"
        android:text="@string/descrCurrentClients"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textMaxClients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textCurrentClients"
        android:layout_marginTop="8dp"
        android:text="@string/descrCurrentClients"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textCurrentNodesValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textCurrentNodes"
        android:layout_alignEnd="@+id/textMaxNodesValue"
        android:layout_alignRight="@+id/textMaxNodesValue"
        android:layout_below="@+id/textKrombelHeader"
        android:layout_toEndOf="@+id/textCurrentNodes"
        android:layout_toRightOf="@+id/textCurrentNodes"
        android:gravity="end"
        android:textAppearance="?android:attr/textAppearanceSmall"
        tools:text="569" />

    <TextView
        android:id="@+id/textMaxNodesValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textMaxNodes"
        android:layout_below="@+id/textCurrentNodesValue"
        android:layout_toEndOf="@+id/textCurrentNodes"

        android:layout_toRightOf="@+id/textCurrentNodes"
        android:gravity="end"
        android:textAppearance="?android:attr/textAppearanceSmall"
        tools:text="2125" />

    <TextView
        android:id="@+id/textCurrentClientsValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textCurrentClients"
        android:layout_alignEnd="@+id/textMaxNodesValue"
        android:layout_alignLeft="@+id/textMaxNodesValue"
        android:layout_alignRight="@+id/textMaxNodesValue"
        android:layout_alignStart="@+id/textMaxNodesValue"
        android:gravity="end"
        android:textAppearance="?android:attr/textAppearanceSmall"
        tools:text="654" />

    <TextView
        android:id="@+id/textMaxClientsValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textMaxClients"
        android:layout_alignEnd="@+id/textMaxNodesValue"
        android:layout_alignLeft="@+id/textCurrentClientsValue"
        android:layout_alignRight="@+id/textMaxNodesValue"
        android:layout_alignStart="@+id/textCurrentClientsValue"
        android:layout_below="@+id/textCurrentClientsValue"
        android:gravity="end"
        android:textAppearance="?android:attr/textAppearanceSmall"
        tools:text="135" />
</RelativeLayout>